# IS-TEXNOPARK

./: .env.minio.example  README.md  docker-compose.minio.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/events/: admin.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_eventparticipant_event_and_more.py  0002_initial.py  0003_event_is_private_and_more.py  0004_alter_event_owner_alter_eventparticipant_role.py  0005_eventfile.py  0006_event_registration_ends_at_and_more.py
backend/files/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/files/migrations/: 0001_initial.py  0002_initial.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/stats/: admin.py  apps.py  calculators.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/stats/migrations/: 0001_initial.py  0002_evaluationcriteria_created_at_and_more.py  0002_initial.py  0003_eventrating_grading_system_and_more.py  0004_eventrating_comment_eventrating_offline_session_and_more.py  0005_alter_eventrating_unique_together_and_more.py  0006_remove_eventrating_stats_event_event_i_ad6ea3_idx_and_more.py  0007_remove_eventstatistics_count_fail_and_more.py  0008_eventparticipantstatistics_most_popular_grades.py  (+1 more)
backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
(+41 files in other folders)
