[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.9",
    "django-cors-headers==4.5.0",
    "django-rest-framework>=0.1.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "drf-spectacular>=0.29.0",
    "rest-framework-simplejwt>=0.0.2",
]
